--- a/sass/main.css
+++ b/sass/main.css
@@ -95,4 +95,27 @@ section button:hover {
   background-color: #063331;
   color: white;
 }
+
+@media screen and (max-width: 992px) {
+  section h1 {
+    margin-top: 2em;
+    color: #063331;
+    font-weight: 900;
+    font-size: 2.5em;
+    text-transform: uppercase;
+  }
+  section h2 {
+    margin-top: -0.3em;
+    color: black;
+    font-weight: 300;
+    font-size: 1.5em;
+    text-transform: uppercase;
+  }
+  section p {
+    margin-top: 3em;
+    color: black;
+    font-weight: 300;
+    font-size: 1em;
+  }
+}
 /*# sourceMappingURL=main.css.map */
