--- a/sass/main.scss
+++ b/sass/main.scss
@@ -114,4 +114,29 @@ section {
       color: white;
     }
   }
+
+  @media screen and (max-width: 992px) {
+    h1 {
+      margin-top: 2em;
+      color: $primaryColor;
+      font-weight: 900;
+      font-size: 2.5em;
+      text-transform: uppercase;
+    }
+
+    h2 {
+      margin-top: -0.3em;
+      color: black;
+      font-weight: 300;
+      font-size: 1.5em;
+      text-transform: uppercase;
+    }
+
+    p {
+      margin-top: 3em;
+      color: black;
+      font-weight: 300;
+      font-size: 1em;
+    }
+  }
 }
